Делает sticky кнопку

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -1,5 +1,6 @@
  @import "./components.b/groupers/bayan";
  @import "./components.b/spawners/b_modal";
+ @import "./components.b/controls/button-sticky";
 
  @import "./components.miri/button";
  @import "./components.miri/speakers-card";
