--- a/src/scss/components.miri/_button.scss
+++ b/src/scss/components.miri/_button.scss
@@ -14,6 +14,13 @@
 	font-style: normal;
 	font-weight: 900;
 	letter-spacing: 0.3rem;
+	transition: var(--tr-regular);
+}
+
+.button-primary:hover {
+	@media (any-hover:hover) {
+		background-color: #e3f966;
+	}
 }
 
 .button-second {
@@ -32,6 +39,12 @@
 	font-style: normal;
 	font-weight: 900;
 	letter-spacing: 0.19rem;
+	transition: var(--tr-regular);
+}
+.button-second:hover {
+	@media (any-hover:hover) {
+		background-color: #ffe799;
+	}
 }
 
 .button__text {
