--- a/src/scss/sections.miri/_hero.scss
+++ b/src/scss/sections.miri/_hero.scss
@@ -1,12 +1,14 @@
 .hero {
 	padding-top: 15rem;
 	padding-bottom: 6rem;
+	z-index: 10;
+	position: relative;
 }
 
 .hero__board {
 	position: relative;
 	padding-top: 0.6rem;
-	padding-bottom: 3.5rem;
+	padding-bottom: 8.5rem;
   max-width: calc(100% - 4rem);
   margin-left: auto;
   margin-right: auto;
@@ -146,13 +148,13 @@
 	letter-spacing: 0.12rem;
 }
 
-.hero__button {
-	position: relative;
-	max-width: 37.5rem;
-	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
-}
+// .hero__button {
+// 	max-width: 37.5rem;
+// 	width: 100%;
+// 	margin-left: auto;
+// 	margin-right: auto;
+// }
+
 
 .hero__char {
   display: block;
@@ -165,6 +167,7 @@
   background-position: right bottom;
   background-size: contain;
 }
+
 .hero__char-buble {
 	content: "";
   display: block;
