--- a/src/scss/variables/variables.scss
+++ b/src/scss/variables/variables.scss
@@ -29,9 +29,9 @@ $w-burger: $tablet;
   //   --p-container: 4.5rem;
   // }
 
-  // @media (max-width: $laptop) {
-  //   --p-container: 1.8rem;
-  // }
+  @media (max-width: $laptop) {
+    --p-container: 4rem;
+  }
 
   @media (max-width: $mobile-xl) {
     --p-container: 1.6rem;
