--- a/src/scss/components.miri/_decor-ui.scss
+++ b/src/scss/components.miri/_decor-ui.scss
@@ -45,4 +45,9 @@
 	width: 13.5rem;
 	left: unset;
 	right: 0.5rem;
+	@media (max-width: $mobile-l) {
+		width: 9.5rem;
+		top: -0.6rem;
+		height: 1rem;
+	}
 }
