--- a/src/scss/components.miri/_socials.scss
+++ b/src/scss/components.miri/_socials.scss
@@ -5,7 +5,14 @@
 	--icon-brad: 0;
 	--icon-gap: 6rem;
   --link-padding: 3rem 3.2rem;
+  --c-border: transparent;
 	justify-content: center;
+
+	@media (max-width: $mobile-l) {
+		--icon-size: 6.7rem;
+		--icon-gap: 3rem;
+	  --link-padding: 1.5rem 1.6rem;
+	}
 }
 
 .socials__link {
@@ -14,7 +21,13 @@
 
 .socials__link--telegram {
   --link-padding: 2.8rem 1.2rem;
+  @media (max-width: $mobile-l) {
+	  --link-padding: 1.4rem 0.6rem;
+  }
 }
 .socials__link--youtube {
   --link-padding: 3.8rem 1.2rem;
+  @media (max-width: $mobile-l) {
+	  --link-padding: 1.9rem 0.3rem;
+  }
 }
