--- a/src/scss/sections.miri/_header.scss
+++ b/src/scss/sections.miri/_header.scss
@@ -1,7 +1,7 @@
 .header {
 	padding-top: 2.2rem;
 	padding-bottom: 2.2rem;
-	position: absolute;
+	position: static;
 	top: 0;
 	left: 0;
 	right: 0;
@@ -18,15 +18,26 @@
 	padding-bottom: 1rem;
 	background: #C5E52B;
 	color: #000;
-	font-family: HelveticaNeueCyr;
 	font-size: 4.5rem;
 	font-style: normal;
 	font-weight: 900;
 	line-height: initial;
 	text-transform: uppercase;
 	text-align: center;
+
+	@media (max-width: $mobile-xl) {
+		font-size: 3rem;
+	}
+	@media (max-width: $mobile-l) {
+		font-size: 2rem;
+	}
 }
 
 .header__marquee-text {
 	margin-left: 6rem;
+
+	@media (max-width: $mobile-l) {
+		margin-left: auto;
+		margin-right: auto;
+	}
 }
