Фиксит вложенность выпадаек

--- a/src/scss/sections.miri/_section.scss
+++ b/src/scss/sections.miri/_section.scss
@@ -161,6 +161,7 @@
 .section__bayan.bayan--opened .bayan__bottom {
 	overflow: visible;
 }
-.section__bayan.bayan--opened .bayan__toggler {
+
+.section__bayan.bayan--opened > .bayan__top .bayan__toggler {
 	opacity: 0;
 }
