--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -10,3 +10,4 @@
  @import "./components.miri/modal";
  @import "./components.miri/form";
  @import "./components.miri/input";
+ @import "./components.miri/input-calendar";
