--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -119,6 +119,7 @@ body._lock {
 }
 
 // Библиотеки
+@import "./libs/vanilla-datepicker";
 // @import "./libs/swiper";
 // @import "./libs/fancybox";
 
