--- a/src/scss/sections.miri/_faq.scss
+++ b/src/scss/sections.miri/_faq.scss
@@ -1,14 +1,11 @@
-.faq {
-
-}
-
-.faq__title {
+.faq:not(.section--closed) .faq__title {
 	margin-bottom: 5rem;
 
 	@media (max-width: $mobile-l) {
 		margin-bottom: 2.5rem;
 	}
 }
+
 
 .faq__list {
 	max-width: 127.4rem;
