--- a/src/scss/sections.miri/_offer.scss
+++ b/src/scss/sections.miri/_offer.scss
@@ -7,6 +7,11 @@
 	margin-bottom: 2rem;
 	display: inline-block;
 }
+
+.section--closed .offer__title {
+	margin-bottom: 0;
+}
+
 .offer__title::after {
 	content: "";
 	pointer-events: none;
