--- a/src/scss/components.miri/_modal.scss
+++ b/src/scss/components.miri/_modal.scss
@@ -24,8 +24,10 @@
 		padding-bottom: 7rem;
 	}
 	@media (max-width: $mobile-l) {
-		padding-top: 5rem;
-		padding-bottom: 5rem;
+		// padding-top: 5rem;
+		// padding-bottom: 5rem;
+    padding-top: 10rem;
+    padding-bottom: 6rem;
 	}
 }
 
