--- a/src/scss/components.miri/_input.scss
+++ b/src/scss/components.miri/_input.scss
@@ -44,7 +44,7 @@
   text-align: center;
   border: 0.2rem solid var(--border-color);
   @media (max-width: $mobile-l) {
-    letter-spacing: 0.192rem;
+    letter-spacing: 0;
   }
 }
 
