--- a/src/scss/sections.miri/_book.scss
+++ b/src/scss/sections.miri/_book.scss
@@ -113,11 +113,11 @@
 	margin-bottom: 4.2rem;
 
 	@media (max-width: $mobile-l) {
-		font-size: 2rem;
+		font-size: 1.8rem;
 		margin-bottom: 2rem;
-		padding-left: 1.5rem;
-		padding-right: 1.5rem;
-    letter-spacing: 0.392rem;
+		padding-left: 0;
+		padding-right: 0;
+    letter-spacing: 0.25rem;
 	}
 }
 
